<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:background="@drawable/b_box3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/commentUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/primaryColor"
                android:text="@string/comment_sample_user" />

            <TextView
                android:id="@+id/commentDate"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/commentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/comment_sample_title"
            android:textColor="@color/primaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/commentText"
            android:background="@drawable/b_button5"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_sample_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <RatingBar
                android:id="@+id/commentRating"
                style="@style/buddyToiletStarStyle"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.35"
                android:scaleY="0.35" />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>