<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryBackgroundColor"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:text="@string/userlogin"
                android:textColor="@color/primaryColor"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/secondTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerUsername"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:background="@drawable/p_textinputbackground"
                        android:fontFamily="sans-serif"
                        android:hint="@string/email_text"
                        android:paddingStart="55dp"
                        android:paddingLeft="55dp"
                        android:textColor="@color/primaryColor"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@color/secondTextColor"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/secondTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:background="@drawable/p_textinputbackground"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="55dp"
                        android:paddingLeft="55dp"
                        android:textColor="@color/primaryColor"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/b_button3"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/login_text"
                        android:textColor="@color/white"
                        android:textSize="26sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/loginForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/forgotuserpass"
                    android:textColor="@color/secondTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/btGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/b_buttongoogle"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="5dp"
                        android:background="@mipmap/i_google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/signGoogle"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </LinearLayout>

                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/b_buttonfacebook"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="19dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="28dp"
                        android:layout_marginRight="23dp"
                        android:background="@drawable/l_facebook" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/singFacebook"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                </LinearLayout>
                -->
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/loginRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="35dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/createaccount"
                        android:textColor="@color/secondTextColor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loginProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>